2008-01-04  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        (make_reply_stream):
	Update to new gio API

2008-01-03  Matthias Clasen  <mclasen@redhat.com>

	* daemon/Makefile.am: Install the .mount files
	in /usr/share/gvfs/mounts, not in /etc/gvfs/mounts

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
	Handle pool finalizing on unloads of hal module
	(#507037)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Return icons
	
2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Use right types for file times (#506494)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Don't return errors on EOF (#506493)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * mkinstalldirs: Added.
	Added mkinstalldirs to svn and EXTRA_DIST ase
	we now don't gettextize in autogen.

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * hal/ghaldrive.c:
        (_drive_get_description):
	Fix plus/minus utf8 string.
	Patch from Luca Ferretti.

2007-12-20  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.0 ===

2007-12-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.ac:
	Bump version to 0.1.0

2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * autogen.sh:
	Don't run gettextize
	
        * programs/Makefile.am:
	dist gvfs-less

2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * daemon/main.c:
	Fix translated "".
	
        * hal/ghaldrive.c:
	Encode +/- as utf8 c escapes

2007-12-20  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Require glib 2.15.0
	
2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c: