@@ -1,3 +1,8 @@
+2008-01-07  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
+	Update to new gio API
+
 2008-01-04  Alexander Larsson  <alexl@redhat.com>
 
         * daemon/gvfsbackendsftp.c:
